--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 <!--This is the structure of the salon client app-->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8"> 
+        <script src="salon_backend.js"></script>
+        <link rel="stylesheet" href="salonStyles.css">
+    </head>
+    <body>
+        <div class="container">
+            <div class="left">
+                
+            </div>
+        </div>
+    </body>
+</html>
